# pyramid-cookiecutter-starter

./: .devcontainer-docker-compose.yml  .gitignore  README.rst  cookiecutter.json  requirements-dev.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
hooks/: post_gen_project.py
templates/: base.ini
tests/: expected_files.py  test_base.py  test_celery.py  test_cornice.py  test_grpc.py  test_it.py  test_jwt.py  test_pyramid_services.py  test_sqlalchemy.py  test_zodb.py  utils.py
{{cookiecutter.repo_name}}/: .devcontainer-docker-compose.yml  .gitignore  Dockerfile  Makefile  README.md  development.ini  production.ini  pyproject.toml  pytest.ini  testing.ini
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
{{cookiecutter.repo_name}}/grpc_protos/greet/v1/: greet.proto
{{cookiecutter.repo_name}}/grpc_protos/healthz/v1/: healthz.proto
{{cookiecutter.repo_name}}/sphinx_docs/source/: conf.py  index.rst
{{cookiecutter.repo_name}}/sphinx_docs/source/grpc/: index.rst
{{cookiecutter.repo_name}}/sphinx_docs/source/models/: index.rst
{{cookiecutter.repo_name}}/sphinx_docs/source/rest/: index.rst
{{cookiecutter.repo_name}}/tests/: base_conftest.py  base_test_functional.py  sqlalchemy_conftest.py  sqlalchemy_factories.py  zodb_conftest.py
{{cookiecutter.repo_name}}/tests/cornice_rest_tests/: test_greet.py  test_swagger.py
{{cookiecutter.repo_name}}/tests/grpc_test_grpcs/: test_greet.py
{{cookiecutter.repo_name}}/tests/plugins/: celery_celery.py  grpc_grpc.py  jwt_jwt.py  orchestrator_conductor.py  sqlalchemy_sa.py
{{cookiecutter.repo_name}}/tests/rpc_test_grpcs/: test_greet.py
{{cookiecutter.repo_name}}/tests/sqlalchemy_test_models/: test_mymodel.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: base___init__.py  base_routes.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_scripts/: manage.py  sqlalchemy_drop_db.py  sqlalchemy_initialize_db.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_views/: default.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_views/api/v1/: __init__.py  apispecview.py  example.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_views/cornice_api/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_views/cornice_api/v1/: apispecview.py  greet.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/celery_tasks/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/grpc_grpc/: decorators.py  interseptors.py  main.py  server.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/grpc_grpc_services/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/grpc_grpc_services/hello/v1/: company_pb2.py  company_pb2_grpc.py  hello.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/grpc_grpcs/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/grpc_grpcs/greet/v1/: greet.py  greet_pb2.py  greet_pb2_grpc.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/grpc_grpcs/healthz/v1/: healthz.py  healthz_pb2.py  healthz_pb2_grpc.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/jwt_a10n/: __init__.py  helper.py  jwks.py  keys.py  police.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pyramid_services_services/: __init__.py  greet_service.py  my_service.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/sqlalchemy_alembic/: env.py
