[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors = ["Robbin Dev Team <dev@robbin.com.br>"]
readme = "README.md"
packages = [{include = "{{cookiecutter.repo_name}}"}]

[tool.poetry.dependencies]
python = "^3.11"
plaster_pastedeploy = "*"
pyramid = "*"
pyramid_{{ cookiecutter.template_language }} = "*"
pyramid-retry = "*"
pyramid_debugtoolbar = "*"
pyramid-auto-env = "*"
waitress = "*"
gunicorn = "*"
pyramid-services = "*"
requests = "*"
camel-converter = "*"
{%- if cookiecutter.backend == 'sqlalchemy' %}
alembic = "*"
pyramid_retry = "*"
pyramid_tm = "*"
SQLAlchemy = "*"
transaction = "*"
zope-sqlalchemy = "*"
{%- elif cookiecutter.backend == 'zodb' %}
pyramid_retry = "*"
pyramid_tm = "*"
pyramid_zodbconn = "*"
transaction = "*"
ZODB = "*"
{%- endif %}
{%- if cookiecutter.rest_framework == 'cornice' %}
cornice = "*"
pycornmarsh = "*"
{%- endif %} 
{%- if cookiecutter.schemas == 'marshmallow' %}
marshmallow = "*"
{%- endif %}
{%- if cookiecutter.authentication == 'jwt' %}
pyramid-jwt = "*"
pyjwt = {extras = ["crypto"], version = "*"}
{%- endif %}
{%- if cookiecutter.rpc == 'grpc' %}
grpc-interceptor = "*"
pyramid-grpc = "*"
grpcio = "*"
grpcio-tools = "*"
{%- endif %}
{%- if cookiecutter.tasks == 'celery' %}
pyramid_celery = "*"
{%- endif %}


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
webtest = "*"
pytest-mock = "*"
{%- if cookiecutter.backend == 'sqlalchemy' %}
testing-postgresql = "*"
factory-boy = "*"
pytest-factoryboy = "*"
{%- endif %}
{%- if cookiecutter.rpc == 'grpc' %}
pytest-grpc = "*"
python-jose = "*"
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."paste.app_factory"]
main = "{{cookiecutter.repo_name}}:main"

[tool.poetry.scripts]
manage = '{{cookiecutter.repo_name}}.scripts.manage:cli'
{%- if cookiecutter.backend == 'sqlalchemy' %}
initialize_db = '{{cookiecutter.repo_name}}.scripts.initialize_db:main'
drop_db = '{{cookiecutter.repo_name}}.scripts.drop_db:main'
{%- endif %}
{%- if cookiecutter.rpc == 'grpc' %}
grpc-server = 'pyramid_grpc.server:run'
{%- endif %}
