[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors = ["Robbin Dev Team <dev@robbin.com.br>"]
readme = "README.md"
packages = [{include = "{{cookiecutter.repo_name}}"}]

[tool.poetry.dependencies]
python = "^3.11"
plaster_pastedeploy = "*"
pyramid = "*"
pyramid_{{ cookiecutter.template_language }} = "*"
pyramid-retry = "*"
pyramid_debugtoolbar = "*"
pyramid-auto-env = "*"
gunicorn = "*"
pyramid-services = "*"
camel-converter = "*"
{%- if cookiecutter.persistence.startswith('sqlalchemy') %}
alembic = "*"
pyramid_retry = "*"
pyramid_tm = "*"
SQLAlchemy = "*"
transaction = "*"
zope-sqlalchemy = "*"
{%- if cookiecutter.persistence == 'sqlalchemy-postgres' %}
psycopg2-binary = "*"
{%- endif %}
{%- elif cookiecutter.persistence == 'zodb' %}
pyramid_retry = "*"
pyramid_tm = "*"
pyramid_zodbconn = "*"
transaction = "*"
ZODB = "*"
{%- endif %}
{%- if cookiecutter.rest == 'cornice' %}
cornice = "*"
pycornmarsh = "*"
{%- endif %} 
{%- if cookiecutter.schemas == 'marshmallow' %}
marshmallow = "*"
{%- endif %}
{%- if cookiecutter.authentication == 'jwt' %}
requests = "*"
pyramid-jwt = "*"
pyjwt = {extras = ["crypto"], version = "*"}
{%- endif %}
{%- if cookiecutter.rpc == 'grpc' %}
grpc-interceptor = "*"
pyramid-grpc = "*"
grpcio = "*"
grpcio-tools = "*"
{%- endif %}
{%- if cookiecutter.tasks == 'celery' %}
pyramid_celery = "*"
{%- if cookiecutter.orchestrator == 'conductor' %}
conductor-celery = "*"
{%- endif %}
{%- endif %}


[tool.poetry.group.dev.dependencies]
waitress = "*"
pytest = "*"
pytest-cov = "*"
black = "*"
webtest = "*"
pytest-mock = "*"
{%- if cookiecutter.persistence.startswith('sqlalchemy') %}
factory-boy = "*"
pytest-factoryboy = "*"
{%- if cookiecutter.persistence == 'sqlalchemy-postgres' %}
testing-postgresql = "*"
{%- endif %}
{%- endif %}
{%- if cookiecutter.rpc == 'grpc' %}
pytest-grpc = "*"
{%- endif %}
{%- if cookiecutter.docs == 'sphinx' %}
sphinx = "7.2.4"
{%- endif %}
{%- if cookiecutter.authentication == 'jwt' %}
python-jose = "*"
{%- endif %}
responses = "*"
pytest-responses = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."paste.app_factory"]
main = "{{cookiecutter.repo_name}}:main"

[tool.poetry.scripts]
manage = '{{cookiecutter.repo_name}}.scripts.manage:cli'
{%- if cookiecutter.persistence.startswith('sqlalchemy') %}
initialize_db = '{{cookiecutter.repo_name}}.scripts.initialize_db:main'
drop_db = '{{cookiecutter.repo_name}}.scripts.drop_db:main'
{%- endif %}
{%- if cookiecutter.rpc == 'grpc' %}
gserve = 'pyramid_grpc.main:run'
{%- endif %}
